[package]
authors = ["Felix Obenhuber <felix@obenhuber.de>"]
build = "build.rs"
name = "android-binder"
version = "0.1.0"
[dependencies]
byteorder = "1.1.0"
cargo-make = "0.10.2"
hexdump = "0.1.0"
log = "0.3.8"
nix = "0.9.0"

[dependencies.error-chain]
default-features = false
version = "0.11.0"

[dev-dependencies]
android_logger = "0.3.0"

[features]
binder_version_7 = []
binder_version_8 = []
default = ["binder_version_7"]
